// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTableCell should be rendered correctly 1`] = `
<div
  className="uui-dt-vars cell uui-table-cell cell data-table-cell cell uui-size-36 padding-12 align-widgets-top"
  role="cell"
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "150px",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "justifyContent": undefined,
      "minWidth": "150px",
      "textAlign": undefined,
    }
  }
>
  <div>
    Test
  </div>
</div>
`;

exports[`DataTableCell should be rendered correctly 2`] = `
<div
  className="uui-dt-vars cell uui-table-cell cell data-table-cell cell uui-size-48 padding-24 padding-right-24 align-widgets-top"
  role="cell"
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "150px",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "justifyContent": undefined,
      "minWidth": "150px",
      "textAlign": undefined,
    }
  }
>
  <div>
    Test
  </div>
</div>
`;
